--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "start": "node server.js"
   },
   "keywords": [],
@@ -15,5 +16,13 @@
     "cors": "^2.8.4",
     "csv2json": "^1.4.2",
     "express": "^4.16.3"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "jest": "^23.2.0",
+    "superagent": "^3.8.3",
+    "supertest": "^3.1.0",
+    "swagger-ui-express": "^3.0.10"
   }
 }
